--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=proyecto-db-design
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://db:3306/proyecto?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
